( v 2021-02-07 )
[ content ]
[ ui ]
[ fixes ]
	- transition issue in navigator
[ misc ]
	- renamed classes