@@ -2,28 +2,27 @@
 <html lang="en">
 <head>
 
-	<title>documentation</title>
+	<title>cookies</title>
 
 	<meta name="HandheldFriendly" content="true">
 	<meta name="MobileOptimized" content="20">
 
-	<link rel="stylesheet" href="./index.css">
-	<link rel="stylesheet" href="./lightmode.css">
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="./load.js"></script>
-	<script src="./main.js"></script>
+
+	<link rel="stylesheet" href="../index.css">
+
+	<script src="../load.js"></script>
+	<script src="../main.js"></script>
+	<script src="./index.js"></script>
 
 </head>
 <body>
-
-	<a href="/" id="heading">projects</a>
-
+	
+	<a href="/" id="heading">cookies</a>
+	
 	<div id="lightdark"></div>
 
-	<div id="projects">
-		<a class="project" href="/openrgb/">openrgb-sdk</a>
-	</div>
+	<div id="cookies"></div>
 
 	<div id="footer">
 		<a href="/cookies/">cookies</a>
