@@ -1,3 +1,5 @@
+/* - GENERAL - */
+
 * {
 	margin: 0;
 	padding: 0;
@@ -9,12 +11,19 @@ body {
 	background: var(--background);
 }
 
-#container {
-	margin-top: 12px;
+a {
+	display: block;
+
+	color: var(--text-color);
+	text-decoration: none;
 }
 
-#header {
-	margin: 2px 5% 10px;
+/* - HEADER - */
+
+#heading {
+	display: block;
+
+	margin: 14px 5% 10px;
 	padding-bottom: 4px;
 	box-sizing: border-box;
 
@@ -25,11 +34,35 @@ body {
 	font-weight: 700;
 }
 
+#heading:hover {
+	color: var(--heading-focus);
+}
+
+/* - PROJECTS - */
+
+#projects {
+	position: absolute;
+
+	width: 80%;
+	margin: 40px 10%;
+	bottom: 50px;
+	top: 71px;
+	
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+#projects::-webkit-scrollbar {
+	width: 0;
+}
+
 .project {
 	display: block;
 
 	width: 100%;
 	padding: 25px 0;
+	height: 25px;
+	margin-bottom: 5px;
 
 	font-size: 20px;
 	text-align: center;
@@ -41,16 +74,111 @@ body {
 	cursor: pointer;
 }
 
+.project:last-child {
+	margin: 0;
+}
+
 .project:hover {
 	background: var(--index-project-background-focus);
 }
 
-#projects {
+/* - FOOTER - */
+
+#footer {
+	position: fixed;
+	bottom: 0;
+
+	box-sizing: border-box;
+	border-top: 2px var(--heading-border) solid;
+
+	height: 50px;
+	left: 5%;
+	right: 5%;
+
 	display: grid;
-	gap: 5px;
+	grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+	z-index: 4;
+}
+
+#footer > * {
+	height: 48px;
+	padding: 7px 0;
+
+	box-sizing: border-box;
+
+	background: var(--background);
+
+	color: var(--footer-color);
+	font-size: 18px;
+	text-align: center;
+}
+
+#footer > *:hover {
+	background: var(--footer-background-focus);
+}
+
+#footer-background {
+	position: fixed;
+	
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 2;
+	
+	height: 50px;
+
+	background: var(--background);
+}
+
+/* - COOKIES - */
+
+#cookies {
+	position: absolute;
 
 	width: 80%;
 	margin: 40px 10%;
+	bottom: 50px;
+	top: 71px;
+}
+
+.cookie {
+	width: 100%;
+	height: 50px;
+	margin-bottom: 5px;
+}
+
+.cookie:last-child {
+	margin: 0;
+}
+
+.cookie > * {
+	height: inherit;
+	box-sizing: border-box;
+	padding: 12px;
+	font-size: 18px;
+}
+
+.cookie-name {
+	width: 80%;
+	float: left;
+	white-space: pre;
+}
+
+.cookie-delete {
+	width: 20%;
+	float: right;
+	text-align: center;
+	background: var(--cookie-delete);
+	cursor: pointer;
+}
+
+.cookie-value {
+	display: inline;
+	color: var(--cookie-value);
+}
+
+.cookie-delete:hover {
+	background: var(--cookie-delete-focus);
 }
 
 /* - LIGHTDARK - */
