@@ -1,15 +1,14 @@
 window.onload = function () {
 	/* - CODE - */
 	// main
-	$("pre.hljs").on("click", el => copy(el.target))
+	$("pre.hljs").on("click", ev => copy(ev.target))
 
 	// extend
-	$(".extend-code").on("click", el => toggleCode(el.target))
+	$(".extend-code").on("click", ev => toggleCode(ev.target))
 	$(".extend-code").css("transition", "1s")
 
-
-	/* - ACTION-BAR - */
-	$("#action-bar-close").on("click", el => $(el.target).parent().css("display", "none"))
+	/* - HEADING - */
+	$("#heading, #doc-heading").css("transition", "color 0.4s")
 
 
 	/* - CONTENT - */
@@ -26,6 +25,10 @@ window.onload = function () {
 	$("#navigator-overlay").on("click", () => toggleNavigator("off"))
 
 
+	/* - FOOTER - */
+	$("#footer > *").css("transition", "background 0.4s")
+
+
 	/* - LIGHTDARK - */
 	$("#lightdark").on("click", toggleLightDark)
 	$("#lightdark").css("transition", "box-shadow 0.4s")
@@ -35,6 +38,14 @@ window.onload = function () {
 	$(".property-link, .table a").css("transition", "color 0.4s")
 
 
+	/* - ACTION-BAR - */
+	$("#action-bar-close").on("click", ev => $(ev.target).parent().css("display", "none"))
+
+		
 	/* - PROJECT - */
 	$(".project").css("transition", "background 0.4s")
+
+	/* COOKIES */
+	if (window.location.pathname == "/cookies/") loadActiveCookies()
+	console.log(document.cookie)
 }
