@@ -21,7 +21,7 @@
 	
 	<div id="extend-navigator"><div></div><div></div></div>
 	<div id="navigator">
-		<a href="/openrgb/" id="navigator-heading">Navigation</a>
+		<a href="/" id="navigator-heading">Navigation</a>
 		<div id="navigator-list">
 			<a href="/openrgb/client/" class="navigator-item">Client</a>
 			<a href="/openrgb/device/" class="navigator-item">Device</a>
@@ -36,7 +36,7 @@
 	<div id="lightdark"></div>
 
 	<div id="doc">
-		<div id="doc-heading">class Device</div>
+		<a href="/openrgb/" id="doc-heading">class Device</a>
 
 		<div id="content">
 
@@ -183,6 +183,11 @@ let zones = device.zones
 			
 		</div>
 	</div>
+
+	<div id="footer">
+		<a href="/cookies/">cookies</a>
+	</div>
+	<div id="footer-background"></div>
 
 	<div id="action-bar">
 		<div class="action-content"></div>
